--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   font-family: sans-serif;
   text-align: center;
   padding: 20px;
-  background-color: #fff0f5; /* Lightest pink */
+  background-color: #ffd6eb; /* Lightest pink */
 }
     .input-row {
       display: flex;
