--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <input type="number" id="time-input" placeholder="e.g., 21" min="0" max="24" />
       <button id="enter-button" onclick="checkTime()">Enter</button>
     </div>
-<img src="eating-caby.gif" alt="Time selection GIF" style="max-width: 100%; height: auto; margin-top: 20px;">
+ <img src="c:\Users\pixel\Desktop\Jayden Chay\Jayden HTML\eating-caby.gif" alt="Time selection GIF" style="max-width: 100%; height: auto; margin-top: 20px;">
 
     <div id="message"></div>
   </div>
