--- a/index.html
+++ b/index.html
@@ -210,15 +210,46 @@ function confirmPrayer() {
 }
 
 function showImportantMessage() {
-  const message = "I'm not sure if you remember this but 1 time i was sick at the month march and you told me whatever stress or overthinking i have i should always open up to you and I've been way better ever since you started caring so much about me,Im extremely grateful for all you've done for me and this code doesn't compare even the slightest to the things you done for me.You know because of the amount of things you've done for me i've always tried to repay the kindness back to you,but i've always failed because I'm not as useful nor discipline as you and your determination on helping others really inspired me to do good and help others too.You've brought me closer to god than i've ever been and i hope you can continue doing that.I've a confession for you lmao but before meeting you I am the worst you can imagine you can ask loke yew but I've always made fun of people appearance and lied,but after meeting you i was so inspired by your kindness so i try follwing the ways of the bible(i dont know if im doing and good)so I tried to do good just to follow behind your footsteps like a baby penguin.Proverbs 27:17 says : *As iron sharpens iron,so one person sharpens another.* and you've done nothing but that.Whenever i get a sickness no matter how painful it is and my body trying to give up on me but a single sentence from you rose my willpower on not making you worried of me and miraculously I will be fully recovered the next day its all thanks to you and most importantly the lord too.Sorry im getting carried away but i wanted to say if the reason you cant sleep coz of stress from all the acedemic expectations just so you know no matter what happens i will always be here if you need me i will try my best to help even if im not capable of it,i have another confession to tell you know it's not that i dont want to talk to you but you know the feeling where you feel very guility and dont want to pray yeah that's me and whenever you try talking to someone very kind or very attractive you wont help but tremble not in fear but coz of you being too out of my league so um in order to not embarass myself thats why i dont approach you but now im trying to talk to you like a few sentence by sentence and relise theres nothing be scared of i dont know how many times ive said this but you're wayyyyy tooooo kinddd like bro my mind can only thought of you when someone meantion if there's any kind person lol .you've been my tutor for a year I reckon,and it have really helped me understand the math topic even when i couldn't I've never liked math but the time you've spent helping me,made me have a whole new perspective on it and helped in my coding path too.Whenever i try to downgrade myself by calling myself a fool or im stupid you've always ensure me that im not and you've always made me feel very special like i've gained superpowers you know and it really rose y motivation and discipline i was slothing alot b4 .I understand you're stress trying to fulfill everyones expectation i've been there too my parents always said if i dont do good i'd have to quit and if i dont hit state its the same.Its not that im not tired from all my training so i dont sleep its because i know your feeling so i cant afford to see you like this and what i can do is to just keep you company and ensuring you sleep earlier so you wont get sick easily like me now,I've always prayed to see you thrive in everything you do and hope you dont get sick, there's where my happiness come from and i really do hope my prayers really do come true i can write a whole book on the thigs you do for me but this is getting a little too long i apologise.BTW The Cabybara Was Coz you Like Them so i picked those gif hahaha forgive me and thanks alot remember whanever you need i will always try to be there. even tho we dont talk much as ofc im scared and not want my playful act to annoy you or disturb you.Oh yeah my fault i use your birthday wish for my wallpaper coz i think it's very pretty and i like it very much.I take your empty correction tape cartrage to everywhere i go like the gym,pool and like evrywhere to remember your incouragement( i treasure it a lot dw) as again thank you and this is a little long no needa hide any of your feelings no one except Christ Jesus is prefect its ok trust me,but i think um i've been saying a little too much of mine hope you wont block me after this .";
-  const messageElem = document.getElementById("important-message");
-  messageElem.textContent = message;
+  const message = 
+    "I'm not sure if you remember this but 1 time I was sick in the month of March and you told me whatever stress or overthinking I have I should always open up to you, and I've been way better ever since you started caring so much about me. " +
+    "I'm extremely grateful for all you've done for me and this code doesn't compare even the slightest to the things you've done for me.<br><br>" +
 
-  // Clear the page after 3 seconds
+    "You know because of the amount of things you've done for me I've always tried to repay the kindness back to you, but I've always failed because I'm not as wise nor disciplined as you. " +
+    "Your determination on helping others really inspired me to do good and help others too. You've brought me closer to God and I hope you can continue doing that.<br><br>" +
+
+    "I've a confession for you lmao — before meeting you, I was the worst you can imagine. You can ask Loke Yew, but I used to fat-shame people and lie, but after meeting you I was so inspired by your kindness that I tried to do good just to follow in your footsteps like a baby penguin. " +
+    "Like what Proverbs 27:17 says: <em>\"As iron sharpens iron, so one person sharpens another.\"</em> And you've done nothing but that.<br><br>" +
+
+    "Whenever I get a sickness, no matter how painful it is and my body tries to give up on me, a single sentence from you raises my willpower not to make you worried about me, and miraculously I’ll be fully recovered the next day — it’s all thanks to you and most importantly the Lord too.<br><br>" +
+
+    "Sorry I’m getting carried away, but I wanted to say: if the reason you can't sleep is because of stress from all the academic expectations — just so you know, no matter what happens, I will always be here. " +
+    "If you need me, I will try my best to help even if I'm not capable of it.<br><br>" +
+
+    "You've been my tutor for a year I reckon, and it has really helped me understand the math topic even when I couldn't. " +
+    "I've never liked math but the time you've spent helping me made me have a whole new perspective on it and helped in my coding path too.<br><br>" +
+
+    "Whenever I try to downgrade myself by calling myself a fool or saying I’m stupid, you've always assured me that I'm not and you've always made me feel special. You know, I understand you're stressed trying to fulfill everyone's expectations — I've been there too. " +
+    "My parents always said if I don’t do good I’d have to quit, and if I don’t hit state, it's the same.<br><br>" +
+
+    "It’s not that I'm not tired from all my training so I don't sleep — it’s because I know how you're feeling, so I can't afford to see you like this. " +
+    "What I can do is just keep you company and ensure you sleep earlier so you won't get sick easily like me now.<br><br>" +
+
+    "I've always prayed to see you thrive and hope you don't get sick and I really do hope my prayers have been answered. I can write a whole book on the things you do for me but this is getting a little too long I apologise.<br><br>" +
+
+    "<strong><a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' target='_blank'>Click here, this part is important </a></strong><br><br>" +
+
+    "BTW the Capybara was 'coz you like them so I picked those gifs hahaha forgive me and thanks a lot. Remember, whenever you need me, I will always try to be there. Even though we don't talk much.";
+
+  const messageElem = document.getElementById("important-message");
+  messageElem.innerHTML = message;
+
+  // Clear the page after 50 minutes
   setTimeout(() => {
     document.body.innerHTML = "";
-  }, 300000000);
+  }, 3000000);
 }
+
+
 
 
     function remindToPray() {
