--- a/index.html
+++ b/index.html
@@ -194,11 +194,34 @@
 
     function showImportantMessage() {
       const message =
-        "I'm not sure if you remember this but 1 time I was sick in the month of March and you told me whatever stress or overthinking I have I should always open up to you..." +
-        "<br><br>... [Full message continues here, as in your original] ..." +
-        "<br><br><strong><a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' target='_blank'>Click here, this part is important </a></strong><br><br>" +
-        "BTW the Capybara was 'coz you like them so I picked those gifs hahaha forgive me and thanks a lot. Remember, whenever you need me, I will always try to be there. Even though we don't talk much.";
+       "I'm not sure if you remember this but 1 time I was sick in the month of March and you told me whatever stress or overthinking I have I should always open up to you, and I've been way better ever since you started caring so much about me. " +
+    "I'm extremely grateful for all you've done for me and this code doesn't compare even the slightest to the things you've done for me.<br><br>" +
 
+    "You know because of the amount of things you've done for me I've always tried to repay the kindness back to you, but I've always failed because I'm not as wise nor disciplined as you. " +
+    "Your determination on helping others really inspired me to do good and help others too. You've brought me closer to God and I hope you can continue doing that.<br><br>" +
+
+    "I've a confession for you lmao — before meeting you, I was the worst you can imagine. You can ask Loke Yew, but I used to fat-shame people and lie, but after meeting you I was so inspired by your kindness that I tried to do good just to follow in your footsteps like a baby penguin. " +
+    "Like what Proverbs 27:17 says: <em>\"As iron sharpens iron, so one person sharpens another.\"</em> And you've done nothing but that.<br><br>" +
+
+    "Whenever I get a sickness, no matter how painful it is and my body tries to give up on me, a single sentence from you raises my willpower not to make you worried about me, and miraculously I’ll be fully recovered the next day — it’s all thanks to you and most importantly the Lord too.<br><br>" +
+
+    "Sorry I’m getting carried away, but I wanted to say: if the reason you can't sleep is because of stress from all the academic expectations — just so you know, no matter what happens, I will always be here. " +
+    "If you need me, I will try my best to help even if I'm not capable of it.<br><br>" +
+
+    "You've been my tutor for a year I reckon, and it has really helped me understand the math topic even when I couldn't. " +
+    "I've never liked math but the time you've spent helping me made me have a whole new perspective on it and helped in my coding path too.<br><br>" +
+
+    "Whenever I try to downgrade myself by calling myself a fool or saying I’m stupid, you've always assured me that I'm not and you've always made me feel special. You know, I understand you're stressed trying to fulfill everyone's expectations — I've been there too. " +
+    "My parents always said if I don’t do good I’d have to quit, and if I don’t hit state, it's the same.<br><br>" +
+
+    "It’s not that I'm not tired from all my training so I don't sleep — it’s because I know how you're feeling, so I can't afford to see you like this. " +
+    "What I can do is just keep you company and ensure you sleep earlier so you won't get sick easily like me now.<br><br>" +
+
+    "I've always prayed to see you thrive and hope you don't get sick and I really do hope my prayers have been answered. I can write a whole book on the things you do for me but this is getting a little too long I apologise.<br><br>" +
+
+    "<strong><a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' target='_blank'>Click here, this part is important </a></strong><br><br>" +
+
+    "BTW the Capybara was 'coz you like them so I picked those gifs hahaha forgive me and thanks a lot. Remember, whenever you need me, I will always try to be there. Even though we don't talk much.";
       document.getElementById("important-message").innerHTML = message;
 
       // Clear the page after 50 minutes
@@ -224,3 +247,4 @@
   </script>
 </body>
 </html>
+
