--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
   <div id="main-content">
     <h1>Welcome to the website I've designed for you</h1>
-    <p>What's the time now? (Enter the hour in the 24 hour format, example 21 for 9PM):</p>
+    <p>What's the time now? (Enter the hour in the 24 hour format, example 21 for 9PM,1 for 1AM):</p>
     <div class="input-row">
       <input type="number" id="time-input" placeholder="e.g., 21" min="0" max="24" />
       <button id="enter-button" onclick="checkTime()">Enter</button>
@@ -96,7 +96,7 @@
 
       if (isNaN(time) || time < 0 || time > 24) {
         document.getElementById("message").textContent = "Please enter a valid hour between 0 and 24.";
-      } else if (time >= 21) {
+      } else if (time >= 1) {
         mainContent.innerHTML = `
           <h2>It's late! Have you finished your bedtime routine?</h2>
           <img src="capybara-orange.gif" alt="Time selection GIF" style="max-width: 100%; height: auto; margin-top: 20px;">
@@ -247,4 +247,3 @@
   </script>
 </body>
 </html>
-
